--- a/app/src/main/res/layout/activity_cryptography_credential_menu.xml
+++ b/app/src/main/res/layout/activity_cryptography_credential_menu.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".CryptographyCredentialMenuActivity">
+    tools:context=".CryptoCredMenuActivity">
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie_crypto_credencial"
